# 04_algorithm_demo

./: readme.txt
01_SVM/: data_tools.py  libSVM_model.py  main.py  platSMO.py  readme.txt
02_TensorRT/: readme.me  readme.txt
02_TensorRT/01_pytorch/: 01_onnx_export.py  01_py2onnx.py  02_onnx2trt.py  onnx_inference.py
02_TensorRT/02_fastreid/: 02_py2onnx.py  03_onnx2rt.py  predictor.py  readme.txt
02_TensorRT/02_fastreid/old/: trt_export.py
02_TensorRT/03_CPP/: CMakeLists.txt  main.cpp  readme.txt
02_TensorRT/03_CPP/src/: img_util.cpp  img_util.hpp  log4cplus.properties  log4plus_util.cpp  log4plus_util.h  trt_infer.cpp  trt_infer.hpp  trt_interface.cpp  trt_interface.h
02_TensorRT/04_tensorflow/: 02_trt_infe2r.py  02_trt_infer.py  03_main.py  engine.py  inference.py  readme.txt
03_libtorch_model/: CMakeLists.txt  SDK_main.cpp
03_libtorch_model/src/: config_util.h  nvidia_gpu_util.cpp  nvidia_gpu_util.h  remain_filter.cpp  remain_filter.h
04_mobileNetV3/: 01_test.py  main.py  predict.py  readme.txt
04_mobileNetV3/src/: config.py  model.py  preprocess.py  train_utils.py
04_mobileNetV3/src/utils/: file_utils.py  onnx_inference.py  trt_export.py  trt_inference.py
06_bg_model/: 02_bgSubtractorModel.ipynb
06_bg_model/01_CPU多线程并行/: CMakeLists.txt  main.cpp
06_bg_model/02_cuda背景检测/: CMakeLists.txt  main.cpp  readme.txt
07_美颜_保边滤波算法/008BEEPS快速双边滤波算法/: GaussBlur.sln  UpgradeLog.XML
07_美颜_保边滤波算法/008BEEPS快速双边滤波算法/Backup/: GaussBlur.sln
07_美颜_保边滤波算法/008BEEPS快速双边滤波算法/Backup/GaussBlur/: BEEPS.cs  Form1.Designer.cs  Form1.cs  GaussBlur.csproj  Program.cs
07_美颜_保边滤波算法/008BEEPS快速双边滤波算法/Backup/GaussBlur/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
07_美颜_保边滤波算法/008BEEPS快速双边滤波算法/GaussBlur/: BEEPS.cs  Form1.Designer.cs  Form1.cs  GaussBlur.csproj
07_美颜_保边滤波算法/008BEEPS快速双边滤波算法/GaussBlur/Properties/: Resources.Designer.cs  Settings.Designer.cs
07_美颜_保边滤波算法/LNM非局部均值滤波器/012╖╟╛╓▓┐╛∙╓╡┬╦▓¿╞≈ - ╕▒▒╛/TestDemo/: Form1.Designer.cs  Form1.cs  ImageProcessDll.cs
07_美颜_保边滤波算法/LNM非局部均值滤波器/012╖╟╛╓▓┐╛∙╓╡┬╦▓¿╞≈ - ╕▒▒╛/TestDemo_C/: TestDemo_C.vcxproj  TestDemo_C.vcxproj.filters  f_NLM.cpp  f_NLM.h
